--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lymeodev/apollon": "^2.0.0"
+    "@lymeodev/apollon": "^2.0.0",
+    "graphql-upload": "^10.0.0"
   }
 }
